note one I had to hand-edit later from the automated synonym handling code I had generated

--- a/additional_nbs/standardizing_initial_data/Looking_up_synonyms_handling_code.ipynb
+++ b/additional_nbs/standardizing_initial_data/Looking_up_synonyms_handling_code.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8b554178-69e0-4587-a3bb-0961e0ff5026",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "4                    ZFAND2B C8orf34 KIF13B ASB7 OGN  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a6b19727-07e2-4cea-8db2-129438b12ca4",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0ba2614c-1bdf-4d5b-8a30-66f5732616d3",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "68         CDC73 SKIC8 LEO1 CHD8 PAF1 ELOA CTR9 WDR61  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "dc138a24-737d-484c-b745-769a2b646dcd",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "14188"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "799da366-9294-4a69-994c-9dc32ba4e4b7",
    "metadata": {},
    "outputs": [
@@ -424,87 +424,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: No match seen for FAM153CP among Q9UHL3 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for FAM153B among Q9UHL3 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for FRG1BP among Q04446 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for TUBB7P among Q13885 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CHCHD2P9 among Q8WYQ3 Q8NAF0 Q9Y2Y9 Q6ZN30 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for OFCC1 among Q13228 Q86YN1 Q9Y4U1 Q32P41 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for LILRA6 among O75019 Q8IZ02 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for LILRB3 among O75019 Q8IZ02 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for NEDD8-MDP1 among Q9H2D1 Q9NWH7 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for GK3P among P32189 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for HMGB1P1 among P26583 P09429 P23497 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for NME2P1 among Q9H4I3 P22392 O00746 Q13232 P22392 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for MRPL45 among Q8TAE8 Q9UBX3 Q9NVS2 Q13405 Q6P161 Q96EL3 Q7Z7H8 Q9NWU5 Q7Z2W9 Q13084 Q9NQ50 Q8IXM3 Q86TS9 Q9BYC9 Q9P0M9 Q8TCC3 Q9NRX2 Q96DV4 Q9H0U6 P52815 Q9Y3B7 Q9H9J2 Q9HD33 Q96GC5 Q7Z7F7 Q9NP92 Q9NYK5 Q9BZE1 Q14197 Q16540 Q9NX20 Q4U2R6 Q9BQC6 Q9BYD1 Q9BYC8 P49406 Q9BQ48 Q96EH3 Q9NZE8 Q6P1L8 Q8N983 Q9H2W6 Q9Y6G3 O75394 Q96A35 Q8N5N7 Q9P015 P09001 Q9BYD6 Q5T653 Q9BYD3 Q9BYD2 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CIRBP-AS1 among Q15042 Q02750 P36507 P15056 P01116 P10398 P04049 Q8IVT5 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for INTS4P2 among Q5TA45 Q96HW7 Q9NVH2 Q6P9B9 Q9NV88 Q9UL03 Q13315 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PRKY among Q16644 O75582 O75676 Q16539 P31260 Q96CC6 Q15759 Q9BY84 Q5VYV7 Q9HBH9 P31269 P17482 O75147 Q32MK0 Q15256 Q9H1R3 Q9BUB5 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for TEX15 among P01008 Q99941 P43251 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for GGT2 among P19440 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PRR5-ARHGAP8 among P85298 Q8WXA8 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PATJ among Q9Y2J4 Q9HAP6 Q9NUP9 Q8N3R9 Q9BUF7 O75970 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for SNRPGP15 among P63162 P62306 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PZP among Q96S86 Q641Q3 Q9UJH8 Q08397 Q8WUX2 P22352 P01023 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PRSS46P among Q9UHI8 Q9UI38 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHG3 among P35219 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for RPS26P11 among Q9BU19 Q02539 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for ABHD18 among Q3V5L5 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHA1 among O75556 Q8NFR7 P02788 P61626 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for EP400P1 among Q96HT8 Q15014 Q9UBU8 Q9Y605 Q86YC2 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for DSCR4 among P02655 P01350 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CROCCP2 among P02655 P01350 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for SOWAHA among Q53LP3 Q9HCM7 Q8WXX7 P61962 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for POM121C among Q96HA1 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for LINC01667 among O00481 P78410 O00478 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CTSL3P among P07711 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for KIR3DP1 among Q14954 P43631 Q14953 P43629 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for AKAP2 among Q9Y2D5 Q96SN8 P31323 P13861 P57105 Q68DQ2 P22612 P17612 P22694 Q9UKA4 Q12802 Q86UN6 Q99996 Q92667 P24588 Q76N32 P11137 P51817 Q96DH6 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for FBLL1 among P49184 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHA2 among Q96Q45 P11678 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for GPATCH4 among Q8NDF8 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for ZSCAN12 among P14384 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for USP41 among Q9UMW8 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for TRAC among Q15545 Q86UD1 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for RUNDC1 among P09917 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PABPC4L among Q8NEY8 Q86U42 Q8WXF0 Q96MU7 O75494 Q96N46 Q8IYB3 P62995 Q16629 Q13247 Q13243 Q13595 Q9UQ35 Q9UHC7 O00507 Q07955 Q13242 P84103 Q08170 Q9BRL6 Q13427 P49761 P49759 P49760 Q9NWH9 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CCDC84 among Q86UT8 P54105 P62316 Q969L4 P63162 P14678 P62306 P62304 P62308 Q8IYT2 Q96GM8 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for HSP90AA4P among Q8TDR2 Q14004 Q9Y243 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for FRMD8P1 among Q9BZ67 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for HSPA7 among Q5T124 O15229 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGLC7 among B9A064 P15814 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGLC2 among B9A064 P15814 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGLC3 among B9A064 P15814 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for APOBEC3D among Q8IUX4 Q96E39 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for HECTD4 among Q08380 Q8NCJ5 O75592 Q9Y223 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for CEP170P1 among Q5SW79 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for WASH3P among Q9Y3C0 Q9UM21 O75143 O75385 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for SIGLEC16 among Q96LC7 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for C17orf80 among Q969F1 Q9BSJ5 Q9H825 Q9UKD1 Q9Y692 P16070 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for FBXL18 among Q96A19 Q96EW2 Q9Y620 P43355 Q8IWZ3 O15480 O15481 Q8N7X4 Q07617 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for ARMCX4 among Q9H3H5 P15812 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for SAC3D1 among Q8NF86 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for RPSAP58 among Q14657 Q86X02 P25208 P08865 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for C9orf106 among P05814 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for POTEKP among Q9NVL8 Q8TC41 Q9ULC3 P02774 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for SSX6P among Q16385 Q16385 Q99909 Q7RTT5 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for APOA4 among P69905 P19823 P02652 Q8N9F7 P02656 Q9H1J1 Q14624 P19652 P02763 P04217 P69891 P68871 P02768 P00751 P02790 P02042 P00915 P01024 P02787 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for LOC100507703 among P04439 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGKC among O75635 O00204 Q9UMR2 P26447 P16050 Q9UBH0 P29373 Q9Y6R7 P01024 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHG2 among O75635 O00204 Q9UMR2 P26447 P16050 Q9UBH0 P29373 Q9Y6R7 P01024 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHG1 among O75635 O00204 Q9UMR2 P26447 P16050 Q9UBH0 P29373 Q9Y6R7 P01024 SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for OR4K3 among Q9NQG5 P19387 O15514 P24928 P30876 P62487 P52434 P19388 P61218 P36954 P52435 O94762 Q96P16 P53803 P62875 Q5VT52 P0CAP1 Q9Y5B0 Q8IXW5 Q92576 Q9HCN4 Q9GZY4 Q9UHW5 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for ZNF724 among Q3ZCQ8 Q9UEG4 Q6ZMS4 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for IGHM among Q86TB9 Q6PJG9 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for NPIPB7 among Q9Y689 O95136 P07360 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PLEKHA8P1 among Q96JA3 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for DHRS4L2 among Q9BTZ2 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PPP1R15B among P43115 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for HLA-H among Q13296 P13747 O95672 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for MRRFP1 among Q96E11 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for PIPSL among Q96I34 Q99755 O60331 P53611 Q86XD5 Q9H832 Q8N414 Q15788 P10114 O75781 Q6PGQ7 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for C3orf14 among Q9NW75 Q9C073 Q9NZM6 Q7RTV5 Q9NVR0 P29459 Q96BQ1 Q8NDH6 Q9HBI5 Q96ST8 Q9NRD5 Q05084 Q13563 Q9BX67 Q9Y624 SPECIAL_unaccounted_gene\n",
-      "WARNING: No match seen for KLRA1P among Q8NDV1 O15466 Q9NPC4 P30511 SPECIAL_unaccounted_gene\n",
       "\n",
       "\n",
       "\n",
@@ -835,6 +754,7 @@
     "    #print(row)# ONLY FOR DEBUGGING. Uncomment when debugging\n",
     "    special_tag_text = \"SPECIAL_unaccounted_gene\"\n",
     "    special_tag_num = 0\n",
+    "    \n",
     "    if special_tag_text in row.Uniprot_ACCs:\n",
     "        special_tag_num += row.Uniprot_ACCs.count(special_tag_text)\n",
     "    if special_tag_num:\n",
@@ -877,6 +797,41 @@
     "for v in syn_special_handling_dict.values():\n",
     "    syn_special_handling_code_text += f\"if matched_genename == '{v[0]}':\\n    matched_genename = '{v[1]}' # makes it match what author provided file had for that one; they used its synonym\\n\"\n",
     "print(syn_special_handling_code_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbce205-a7e4-4893-bc33-722e7de577b2",
+   "metadata": {},
+   "source": [
+    "(Note:\n",
+    "I later noted an issue with this section from that outout:\n",
+    "\n",
+    "```python\n",
+    "if matched_genename == 'LARS1':\n",
+    "    matched_genename = 'LARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "if matched_genename == 'EPRS1':\n",
+    "    matched_genename = 'EPRS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "if matched_genename == 'EPRS1':\n",
+    "    matched_genename = 'QARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "if matched_genename == 'MARS1':\n",
+    "    matched_genename = 'MARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "if matched_genename == 'IARS1':\n",
+    "    matched_genename = 'IARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "if matched_genename == 'DARS1':\n",
+    "    matched_genename = 'DARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "```\n",
+    "\n",
+    "In particular, note that `if matched_genename == 'EPRS1':` gets listed twice!!\n",
+    "`P07814`, which is EPRS1 matches to synonym of `QARS` and so does `P47897`, which is `QARS1`.\n",
+    "It seems for `QARS` it picked the one the authots didn't use. **I had to hard code change subsequent to here for this one!!**\n",
+    "Want:\n",
+    "```python\n",
+    "if matched_genename == 'QARS1':\n",
+    "    matched_genename = 'QARS' # makes it match what author provided file had for that one; they used its synonym\n",
+    "```\n",
+    "I guess if I was redesigning, I'd add in a check make sure no two repeats for `if matched_genename == 'EPRS1':` in printout.   \n",
+    "I'm hoping I didn't miss anything else insidious like that.)"
    ]
   },
   {
