hand-edit one of the synonym handlers that I had generated programmatically but caught it was causing an issue

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1450,14 @@
     "            if original_ACC == 'P0DN79':\n",
     "                matched_genename = 'CBSL' # They use 'CBSL' which doesn't exist in UniProt now; like case for `CYHR1` and `AMY1A` above\n",
     "            # END SET UP FOR SEVERAL SPECIAL CASES WITH MANY SEMI-COLONS + other special cases where ACC is distinct\n",
-    "            what_remains = what_remains.replace(matched_genename,'')\n",
+    "            #what_remains = what_remains.replace(matched_genename,'')#I was using this but found for example like 'TCP10' & 'TCP10L2' that\n",
+    "            #occur in same row `TCP10` was getting encountered first and using the `.replace()` was removing all  'TCP10's and leaving `L2`\n",
+    "            # which doesn't match anything and so shows up erroneously. Splitting on words first and then putting back together after\n",
+    "            # remove will remove only the full match\n",
+    "            parts = what_remains.split()\n",
+    "            if matched_genename in parts:\n",
+    "                parts = [x for x in parts if x != matched_genename] #insures it catches duplicates, too, see where first used in regards to `first_part_matched_genename` above\n",
+    "            what_remains = ' '.join(parts)\n",
     "        else:\n",
     "            # Handle single genename case (when there is no semi-colon)\n",
     "            parts = what_remains.split()\n",
@@ -1585,7 +1592,7 @@
     "                matched_genename = 'LARS' # makes it match what author provided file had for that one; they used its synonym\n",
     "            if matched_genename == 'EPRS1':\n",
     "                matched_genename = 'EPRS' # makes it match what author provided file had for that one; they used its synonym\n",
-    "            if matched_genename == 'EPRS1':\n",
+    "            if matched_genename == 'QARS1':\n",
     "                matched_genename = 'QARS' # makes it match what author provided file had for that one; they used its synonym\n",
     "            if matched_genename == 'MARS1':\n",
     "                matched_genename = 'MARS' # makes it match what author provided file had for that one; they used its synonym\n",
@@ -1777,7 +1784,7 @@
     "                matched_genename = 'AKAP2' # makes it match what author provided file had for that one; they used an abbreviation of what UniProt has under 'Alternative names'\n",
     "            # END SET UP FOR SEVERAL SPECIAL CASES\n",
     "            if matched_genename in parts:\n",
-    "                parts.remove(matched_genename)\n",
+    "                parts = [x for x in parts if x != matched_genename] #insures it catches duplicates, too, see where first used in regards to `first_part_matched_genename` above\n",
     "                what_remains = ' '.join(parts)\n",
     "\n",
     "    # now decide if anything extra has to be added to new_genenames_string by\n",
@@ -1871,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2021,7 @@
        "4                          False                            NOTHING  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2039,24 +2046,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HuMAP2_ID</th>\n",
+       "      <th>Confidence</th>\n",
+       "      <th>Uniprot_ACCs</th>\n",
+       "      <th>genenames</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1240</th>\n",
+       "      <td>HuMAP2_01246</td>\n",
+       "      <td>4</td>\n",
+       "      <td>O43324 P54136 O00560 P14868 P56192 P41252 Q15046 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>EEF1E1 RARS1 SDCBP DARS1 MARS1 IARS1 KARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3572</th>\n",
+       "      <td>HuMAP2_03598</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O43324 P54136 P14868 P56192 P41252 Q15046 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>EEF1E1 RARS1 DARS1 MARS1 IARS1 KARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3938</th>\n",
+       "      <td>HuMAP2_03971</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P54136 P47897 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>RARS1 QARS1 QARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5617</th>\n",
+       "      <td>HuMAP2_05659</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Q7Z3Z3 O43324 P54136 O00560 P14868 P56192 O94966 P41252 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>PIWIL3 EEF1E1 RARS1 SDCBP DARS1 MARS1 USP19 IARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0"
+       "         HuMAP2_ID  Confidence  \\\n",
+       "1240  HuMAP2_01246           4   \n",
+       "3572  HuMAP2_03598           2   \n",
+       "3938  HuMAP2_03971           1   \n",
+       "5617  HuMAP2_05659           5   \n",
+       "\n",
+       "                                                                                                             Uniprot_ACCs  \\\n",
+       "1240         O43324 P54136 O00560 P14868 P56192 P41252 Q15046 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene   \n",
+       "3572                O43324 P54136 P14868 P56192 P41252 Q15046 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene   \n",
+       "3938                                                                               P54136 P47897 SPECIAL_unaccounted_gene   \n",
+       "5617  Q7Z3Z3 O43324 P54136 O00560 P14868 P56192 O94966 P41252 P47897 Q9P2J5 Q12904 Q13155 P07814 SPECIAL_unaccounted_gene   \n",
+       "\n",
+       "                                                                                 genenames  \n",
+       "1240         EEF1E1 RARS1 SDCBP DARS1 MARS1 IARS1 KARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS  \n",
+       "3572               EEF1E1 RARS1 DARS1 MARS1 IARS1 KARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS  \n",
+       "3938                                                                      RARS1 QARS1 QARS  \n",
+       "5617  PIWIL3 EEF1E1 RARS1 SDCBP DARS1 MARS1 USP19 IARS1 QARS1 LARS1 AIMP1 AIMP2 EPRS1 QARS  "
       ]
      },
-     "execution_count": 54,
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unacc_df = fixed_df.copy()\n",
+    "unacc_df = unacc_df[unacc_df.Uniprot_ACCs.str.contains('SPECIAL_unaccounted_gene')]\n",
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None, 'display.max_colwidth', None):\n",
+    "    display(unacc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HuMAP2_ID</th>\n",
+       "      <th>Confidence</th>\n",
+       "      <th>Uniprot_ACCs</th>\n",
+       "      <th>genenames</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1240</th>\n",
+       "      <td>HuMAP2_01246</td>\n",
+       "      <td>4</td>\n",
+       "      <td>O43324 P54136 O00560 P14868 P56192 P41252 Q150...</td>\n",
+       "      <td>EEF1E1 RARS1 SDCBP DARS1 MARS1 IARS1 KARS1 QAR...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3012</th>\n",
+       "      <td>HuMAP2_03035</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Q12799 B9ZVM9 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>SPECIALin_UniProt_but_no_gene SPECIALin_UniPro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3572</th>\n",
+       "      <td>HuMAP2_03598</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O43324 P54136 P14868 P56192 P41252 Q15046 P478...</td>\n",
+       "      <td>EEF1E1 RARS1 DARS1 MARS1 IARS1 KARS1 QARS1 LAR...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3938</th>\n",
+       "      <td>HuMAP2_03971</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P54136 P47897 SPECIAL_unaccounted_gene</td>\n",
+       "      <td>RARS1 QARS1 QARS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5617</th>\n",
+       "      <td>HuMAP2_05659</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Q7Z3Z3 O43324 P54136 O00560 P14868 P56192 O949...</td>\n",
+       "      <td>PIWIL3 EEF1E1 RARS1 SDCBP DARS1 MARS1 USP19 IA...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         HuMAP2_ID  Confidence  \\\n",
+       "1240  HuMAP2_01246           4   \n",
+       "3012  HuMAP2_03035           1   \n",
+       "3572  HuMAP2_03598           2   \n",
+       "3938  HuMAP2_03971           1   \n",
+       "5617  HuMAP2_05659           5   \n",
+       "\n",
+       "                                           Uniprot_ACCs  \\\n",
+       "1240  O43324 P54136 O00560 P14868 P56192 P41252 Q150...   \n",
+       "3012             Q12799 B9ZVM9 SPECIAL_unaccounted_gene   \n",
+       "3572  O43324 P54136 P14868 P56192 P41252 Q15046 P478...   \n",
+       "3938             P54136 P47897 SPECIAL_unaccounted_gene   \n",
+       "5617  Q7Z3Z3 O43324 P54136 O00560 P14868 P56192 O949...   \n",
+       "\n",
+       "                                              genenames  \n",
+       "1240  EEF1E1 RARS1 SDCBP DARS1 MARS1 IARS1 KARS1 QAR...  \n",
+       "3012  SPECIALin_UniProt_but_no_gene SPECIALin_UniPro...  \n",
+       "3572  EEF1E1 RARS1 DARS1 MARS1 IARS1 KARS1 QARS1 LAR...  \n",
+       "3938                                   RARS1 QARS1 QARS  \n",
+       "5617  PIWIL3 EEF1E1 RARS1 SDCBP DARS1 MARS1 USP19 IA...  "
+      ]
+     },
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unacc_df = tracker_results_df.copy()\n",
-    "unacc_df = unacc_df[unacc_df.Uniprot_ACCs.str.contains('SPECIAL_unaccounted_gene')]\n",
-    "len(unacc_df)"
+    "unacc_df"
    ]
   },
   {
@@ -2715,6 +2900,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ".\n",
+      ".\n",
       ".\n"
      ]
     }
