update the standardizing journey

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -2539,7 +2539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hmmm...are these just the HGNC and the ones not in UniProt now? (Way to improve this would be to demonstrate that is the case here.)"
+    "Hmmm...are these just the HGNC ones and the ones not in UniProt now? Yes! (I just went through the CSV searching by hand, and 40 instancs the HGNC ones and the ones not in UniProt now, except special one `SPECIAL_HLA-A-related` Way to improve this document would be to demonstrate that is the case here in some way. Could filter the rows using `SPECIAL` in a copy of the main datafram usibg `fixed_df.copy()` to get started like I did with `unacc_df` several cells above.)"
    ]
   },
   {
