for development iterating check the file just made for duplicates and not the one on record at GitHub

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -2154,7 +2154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several times above I noted the hu.MAP 2.0 data seemed to have duplicate identifiers in what corresponds to both columns. I added dealing with this and can verify here by triggering a run of my `Check_for_duplicates_in_OrderMatchedhumap2data.ipynb` notebook that will get the `humap2_complexes_20200809InOrderMatched.csv` and check. (**Actually** I should maybe not have the notebook get that CSV **since I want to check current generated one** but soon they'll be the same anyway. Only run this when you are sure you updated one on GITHUB!!!)"
+    "Several times above I noted the hu.MAP 2.0 data seemed to have duplicate identifiers in what corresponds to both columns. I added dealing with this and can verify here by triggering a run of a version of my `Check_for_duplicates_in_OrderMatchedhumap2data.ipynb` notebook that will check the current `humap2_complexes_20200809InOrderMatched.csv` file. (By default, the `Check_for_duplicates_in_OrderMatchedhumap2data.ipynb` notebook will get the CSV file on record at GitHub; however, during development I want to check the CSV file just made by the cells above here and so the code prior to '`Now use the notebook that drops getting the version on record`' drops the cells associated with that step so that the check for duplicates uses the current `humap2_complexes_20200809InOrderMatched.csv` file present alongside this notebook.)"
    ]
   },
   {
@@ -2191,7 +2191,18 @@
     }
    ],
    "source": [
-    "%run Check_for_duplicates_in_OrderMatchedhumap2data.ipynb"
+    "# Drop specified cell numbers from a notebook and name the produced one per settings\n",
+    "original_ntbk = \"Check_for_duplicates_in_OrderMatchedhumap2data.ipynb\"\n",
+    "from pathlib import Path\n",
+    "new_ntbk_name = f\"{Path(original_ntbk).stem}4DEV_CURRENT{Path(original_ntbk).suffix}\"\n",
+    "cell_numbers_to_drop = [2,3] #keep in mind that Python uses zero indexing so lower by 1\n",
+    "import nbformat as nbf\n",
+    "ntbk = nbf.read(original_ntbk, nbf.NO_CONVERT)\n",
+    "new_ntbk = ntbk\n",
+    "new_ntbk.cells = [cell for cell_index,cell in enumerate(ntbk.cells) if cell_index not in cell_numbers_to_drop]\n",
+    "nbf.write(new_ntbk, new_ntbk_name, version=nbf.NO_CONVERT)\n",
+    "# Now use the notebook that drops getting the version on record\n",
+    "%run {new_ntbk_name}"
    ]
   },
   {
@@ -2622,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2630,18 +2641,6 @@
      "output_type": "stream",
      "text": [
       ".\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m480\u001b[39m) \u001b[38;5;66;03m#60 seconds times 8 minutes\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m---> 10\u001b[0m     \u001b[43mexecuteSomething\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[76], line 7\u001b[0m, in \u001b[0;36mexecuteSomething\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecuteSomething\u001b[39m():\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#code here\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m480\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
