--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -35,7 +35,7 @@
     "##### Get the complexes with confidence scores\n",
     "\n",
     "Because the author-provided source didn't work for the hu.MAP 3.0 data, I expected `curl -OL \"http://humap2.proteincomplexes.org/static/downloads/humap2/humap2_complexes_20200809.txt\"` to work on my local machine, yet fail on MyBinder because the involved port may be blocked on MyBinder for getting it from the original resource. Because of that expectation, I made a copy at https://gist.githubusercontent.com/fomightez/af3edda957e4d71acbaa30192e74e9af/raw/108a8c3fb3374a74ef3ca5d772a9dfe96e996c93/humap2_complexes_20200809.txt where MyBinder would have access. However, the curl of the original source works!! \n",
-    "(Keeping a note about my copy now but using original sourc"
+    "(Keeping a note about my copy now but using original source.)"
    ]
   },
   {
