convert to humap2 CSV data

--- a/Working_with_hu.MAP2_data_with_Python_in_Jupyter_Basics.ipynb
+++ b/Working_with_hu.MAP2_data_with_Python_in_Jupyter_Basics.ipynb
@@ -783,6 +783,8 @@
     "# USe collected information to enhance the dataframe\n",
     "pn_dict = {k: v['protein_name'] for k, v in lookup_dict.items()}\n",
     "disease_dict = {k: v['disease'] for k, v in lookup_dict.items()}\n",
+    "synonyms_dict = {k: v['synonyms'] for k, v in lookup_dict.items()}\n",
+    "df_expanded['synonyms'] = df_expanded['Uniprot_ACCs'].map(synonyms_dict)\n",
     "df_expanded['protein_name'] = df_expanded['Uniprot_ACCs'].map(pn_dict)\n",
     "df_expanded['disease'] = df_expanded['Uniprot_ACCs'].map(disease_dict)\n",
     "conf_val2text_dict = {\n",
